TestRepo2/src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_State__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a Monopoly and Control state?</inlineHelpText>
        <label>Control State?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Applicable_Rules__c</fullName>
        <label>No. of Applicable Rules</label>
        <summaryFilterItems>
            <field>State_Rules__c.Rule_Applies__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>State_Rules__c.State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Non_Applicable_Rules__c</fullName>
        <label>No. of Non-Applicable Rules</label>
        <summaryFilterItems>
            <field>State_Rules__c.Rule_Applies__c</field>
            <operation>equals</operation>
            <value>N</value>
        </summaryFilterItems>
        <summaryForeignKey>State_Rules__c.State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numerical_Code__c</fullName>
        <label>Numerical Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Abbreviation__c</columns>
        <columns>Control_State__c</columns>
        <columns>No_of_Applicable_Rules__c</columns>
        <columns>No_of_Non_Applicable_Rules__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>